# datajoint_linter

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/datajoint_linter/: main.py
src/datatjoint_linter/: linter.py
tests/: __init__.py  conftest.py  main.py  schema.py  schema_advanced.py  schema_bad.py  schema_empty.py  schema_external.py  schema_good.py  schema_university.py  test_linter.py
