[project]
name = "datajoint_linter"
description = "Linter for DataJoint table definitions"
readme = "README.md"
requires-python = ">=3.9,<3.10"
authors = [
    { name = "Chris Brozdowski", email = "chris.broz@ucsf.edu" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
  "neuroscience", "datajoint"
]
dependencies = [ "datajoint", "pylint" ]
version = "0.0.0"

[project.urls]
"Homepage" = "https://github.com/cbroz1/datajoint_linter"
"Bug Tracker" = "https://github.com/cbroz1/datajoint_linter/issues"

[tool.black]
line-length = 80

[tool.codespell]
skip = '.git,*.pdf,*.svg,*.ipynb,./docs/site/**'
ignore-words-list = 'cbroz1'

[tool.pylint.MASTER]
load-plugins = 'datajoint_linter'
disable = 'use-dict-literal,consider-using-f-string'
