[project]
name = "datajoint_linter"
description = "Linter for DataJoint table definitions"
readme = "README.md"
requires-python = ">=3.9"
authors = [ { name = "Chris Brozdowski", email = "cbrozdowski@yahoo.com" } ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [ "neuroscience", "datajoint" ]
dependencies = [ "datajoint", "pylint", "astroid" ]
version = "0.0.0"

[project.urls]
"Homepage" = "https://github.com/cbroz1/datajoint_linter"
"Bug Tracker" = "https://github.com/cbroz1/datajoint_linter/issues"

[tool.black]
line-length = 80

[tool.codespell]
skip = '.git,*.pdf,*.svg,*.ipynb,./docs/site/**'
ignore-words-list = 'cbroz1'

[tool.pylint.MASTER]
load-plugins = 'datajoint_linter'
disable='E0401,E0102,W0611,W0621,W0401,W0614'
# E0401: Unable to import - varies by environment
# E0102: Function redefined - for Merge tables
# W0611: Unused import - for foreign key imports
# W0621: Outer scope - false positives on key in make
# W0401: Wildcard error - for testing custom err
# W0614: Wildcard error - for testing custom err
